novo layout + ajuste de responsividade

--- a/lca/style/about.css
+++ b/lca/style/about.css
@@ -1,118 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 
-.bg-sobre{
-    height: 100vh;
-    background-color: #CDEEEC;
+#sobre{
+    margin-left:10%;
+    margin-right: 10%;
 }
 
-
-h1.titulo-sobre{
-    font-family: "Roboto", sans-serif;
+h2.titulo-sobre{
+    font-family: 'Gochi Hand', cursive;
     font-weight: bold;
-    font-size: clamp(3rem, 4.5rem, 5rem);
+    font-size: clamp(3rem, 4rem, 5rem);
     text-align: center;
-    color: #3CBBB2;
+    color: #b3282f;
     margin-bottom: 3%;
     padding-top: 5%;
 }
 
-p.resumo{
-    font-family: "Karla", sans-serif;
-    font-size: 1.2rem;
-    text-align: justify;
-    width: 100%;
-
-}
-
-h3.ola{
-    font-family: "Karla", sans-serif;
-    font-weight: bold;
-    font-size: 3rem;
-}
-
-span.nome-empresa{
-    font-family: "Shadows Into Light", cursive;
-    color: #b3282f;
-}
-
-.sobre-a-profissional{
+.conteudo-sobre{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding-bottom: 5%;
 }
 
-.mini-bio{
-    margin-left: 5%;
-    width: 30%;
+.foto-laura{
+    width: 50%;
 }
 
-.imagem-laura{
-    background-color: #FFFFFF;
-    border-radius: 8px;
-    padding: 5%;
-    width: 700px;
+.biografia{
+    padding-left: 3%;
+    font-family: "Karla", sans-serif;
+    font-size: 1.2rem;
+    width: 100%;
 }
 
-.medias{
-    width: 80px;
-    height: 80px;
-    margin-left: 2%;
-    cursor: pointer;
-}
-
-@media(max-width:500px){
-
-
-
-    .bg-sobre{
-        width: 100vw;
-        height: 140vh;
-    }
-    h1.titulo-sobre{
-        font-size: 3rem;
-    }
-
-    p.resumo{
-        font-size: 1rem;
-        padding: 4%;
-        padding-right: 8%;
-    }
-
-    h3.ola{
-        margin-top: 5%;
-        margin-bottom: 5%;
-        font-size: 2.5rem;
-    }
-
-    .sobre-a-profissional{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .mini-bio{
-        margin-left: 5%;
-        width: 100%;
-    }
-
-    .imagem-laura{
-        width: 300px;
-    }
-
-    .medias{
-        width: 70px;
-        height: 70px;
-        margin-left: 2%;
-        cursor: pointer;
-    }
-
-    .icone-um{
-        margin-left: 20%;
-    }
+.biografia-texto h3{
+    text-align: center;
+    color: #b3282f;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
