--- a/lca/style/contact.css
+++ b/lca/style/contact.css
@@ -1,26 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 
-.bg-contato {
-  height: 110vh;
+#contato {
   background: #ffc6c4;
-}
-
-.fotos{
-  height: 80%;
-  width: 80%;
+  padding-bottom: 2%;
 }
 
 .container-conteudo-contato {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
+
 }
 
+.foto-contato{
+  width: 250px;
+  border-radius: 50%;
+}
 
-h1.contato {
-  font-family: "Roboto", sans-serif;
+h1.contato-h1 {
+  font-family: 'Gochi Hand', cursive;
   font-weight: bold;
-  font-size: 4.5rem;
+  font-size: 4rem;
   text-align: center;
   margin-bottom: 3%;
   padding-top: 5%;
@@ -31,103 +32,44 @@ h1.contato {
 p.paragrafo-contato{
   font-family: "Karla", sans-serif;
   font-size: 1.5rem;
-  margin-top: 3%;
-  margin-bottom: 3%;
   text-align: center;
+  color: #353839;
+  line-height: 1em;
+  margin-bottom: 5%;
 }
 
-.localizacao{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-
-.meu-formulario {
-  background-color: white;
-  padding: 3%;
-  border-radius: 10px;
-  width: 35%;
-}
-
-.formulario {
-  width: 100%;
-}
-
-.label-mensagem {
+.primeiro-icone{
+  margin-left: 30%;
+  width: 70px;
+  height: 70px;
   margin-top: 3%;
+  margin-right: 2%;
+  margin-bottom: 5%;
+ 
 }
 
-textarea {
-  border-color: lightgray;
-  border-radius: 5px;
-  resize: none;
-}
-
-.btn{
+.icone-contato{
+  width: 70px;
+  height: 70px;
   margin-top: 3%;
+  margin-right: 2%;
+  margin-bottom: 5%;
+  display: inline-block;
+  
 }
 
-.btn-cor {
-  background-color: #B3282F;
-
-  transition: 200ms;
+.formulario{
+  background-color: #FFFFFF;
+  padding: 2%;
+  border-radius: 8px;
+  width: 45%;
 }
 
-.btn-cor a {
+#contato .btn-contato{
+  color: #FFF;
+  background-color: #FFC939;
+}
+
+a {
   text-decoration: none;
-  color: white;
-}
-
-@media(max-width:500px){
-
-  .bg-contato {
-    height: 150vh;
-    background: #ffc6c4;
-  }
-
-  
-  h1.contato {
-    font-size: 3rem;
-  }
-
-  .localizacao{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  p.paragrafo-contato{
-    font-size: 1rem;
-  }
-  
-  .container-conteudo-contato {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
-
-  .container-dois{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .meu-formulario {
-    margin-top: 15px;
-    margin-left: 20px;
-    background-color: white;
-    width: 90%;
-  }
-
-  .textinput {
-    float: left;
-    width: 100%;
-    min-height: 75px;
-    resize: none;
-}
-
-.banner-contato{
-  width: 100%;
-}
 }
