--- a/lca/style/responsive.css
+++ b/lca/style/responsive.css
@@ -595,8 +595,8 @@
   }
 
   .descricao h3{
-    margin-left: none;
-    margin-right: none;
+    margin-left: 1%;
+    margin-right: 1%;
   }
 
   .titulo-servicos-sm {
