--- a/lca/style/responsive.css
+++ b/lca/style/responsive.css
@@ -98,19 +98,56 @@
 /*smartphone*/
 @media screen and (max-width: 767px) {
   /*menu*/
-  ul.navbar {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  nav {
+    display: none;
   }
 
-  a.button {
-    font-size: 20px;
-    padding: 0px 0px 0px 0px;
+  div.topnav {
+    display: flex;
+  }
+
+  /* Style the navigation menu */
+  .topnav {
+    overflow: hidden;
+    background-color: #1ed5c3;
+    position: relative;
+  }
+
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+  }
+
+  /* Style navigation menu links */
+  .topnav a {
+    font-family: "Nunito", sans-serif;
+    font-size: 17px;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: #1ed5c3;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #1ed5c3;
+    color: #ffffff;
+  }
+
+  /* Style the active link (or home/logo) */
+  .active {
+    height: 20px;
+    background-color: #1ed5c3;
+    color: white;
   }
 
   /*services offered*/
