--- a/lca/style/responsive.css
+++ b/lca/style/responsive.css
@@ -242,6 +242,8 @@
 
   h2.title-of-services {
     font-size: 20px;
+    margin-top: 1%;
+    margin-left: 1%;
     padding-top: 5%;
   }
 
@@ -287,7 +289,7 @@
   /*contact*/
   section#contact h2 {
     font-size: 20px;
-    margin: 10% 10% 10% 10%;
+    margin: 10% 5% 10% 5%;
   }
 
   div.social-media-links img {
